[metadata]
name = pyansible
summary = Run Ansible Playbook from python
description-file =
    README.rst
author = allan
author-email = hung.allan@gmail.com
home-page = https://github.com/allanhung/pyansible
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 4 - Beta

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pyansible
